<resources xmlns:tools="http://schemas.android.com/tools"  
    tools:ignore="MissingTranslation">
    <string name="app_name">我很宅</string>
    <string name="common_no_net">网络不给力，请您稍后重试~</string>
    <string name="common_no_data">无相关数据</string>
    <string name="common_cancel">取消</string>
    <string name="guide_start">开始体验</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新…</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="home_homepage">首页</string>
    <string name="home_commodity">全部商品</string>
    <string name="home_shopping_cart">购物车</string>
    <string name="home_personal">个人</string>
     <string name="common_albums">相&#160;&#160;册</string>
    <string name="common_photograph">拍&#160;&#160;照</string>
    <string name="common_choise_picture">图片选择</string>
	<string name="myingo_login_name_hint">账号</string>
	<string name="myingo_login_pwd_hint">密码</string>
	<string name="myinfo_login">登录</string>
	<string name="myinfo_login_question_register">登录遇到问题?</string>
	<string name="myinfo_newuser_register">新用户注册</string>
	<string name="myinfo_loginbydisanfang_login">使用第三方登录</string>
	<string name="myinfo_login_sina">&#160;&#160;QQ</string>
	<string name="myinfo_login_weibo">微博</string>
	<string name="myinfo_login_weixin">微信</string>
	<string name="myinfo_login_username_null_eror">用户名不能为空，请输入用户名！</string>
	<string name="myinfo_login_password_null_eror">密码不能为空，请输入密码！</string>
	<string name="myinfo_login_success">登录成功</string>
	<string name="myingo_register_inputphone_hint">请输入您的手机号</string>
	<string name="myingo_register_inputcode_hint">请输入您的验证码</string>
	<string name="myinfo_register_send_code" >发送验证码</string>
	<string name="myingo_register_invitation_hint">输入邀请码，您和对方都可以获得相应的积分</string>
	<string name="myingo_register_inputpwd_hint">请输入您的密码</string>
	<string name="myingo_register_inputnpwd_hint">请再次输入您的密码</string>
	<string name="myinfo_register">注册</string>
	<string name="myinfo_register_terms">&#160;&#160;点击注册表示您同意使用</string>
	<string name="myinfo_register_term">《我很宅软件使用协议与服务条款》</string>
	<string name="myinfo_register_phone_null_eror">手机号不能为空，请输入手机号！</string>
	<string name="myinfo_register_phone_not_eror">手机号输入有误，请重新输入！</string>
	<string name="myinfo_register_code_null_eror">验证码不能为空，请输入验证码！</string>
	<string name="myinfo_register_password_null_eror">密码不能为空，请输入密码！</string>
	<string name="myinfo_register_confirm_password_null_eror">确认密码不能为空，请输入确认密码！</string>
	<string name="myinfo_register_password_not_eror">两次密码输入不一致，请重新输入！</string>
	<string name="myinfo_register_code_error">短信验证码输入不正确，请重新输入!</string>
	<string name="myinfo_register_code_time">已发送%1$d秒</string>
	<string name="myinfo_register_code_resend">重新发送</string>
	<string name="myinfo_register_phone_error">手机号输入有误，请重新输入！</string>
	<string name="myinfo_register_success">注册成功!</string>
	<string name="myinfo_update_title">修改密码</string>
	<string name="myingo_update_inputoldpwd_hint">请输入您的旧密码</string>
	<string name="myingo_update_inputnewpwd_hint">请输入您的新密码</string>
	<string name="myingo_update_inputnew2pwd_hint">请再次输入您的新密码</string>
	<string name="myinfo_updatepwdButton">修改</string>
	<string name="myinfo_update_password_success">密码修改成功!</string>
	<string name="myinfo_update_password_mes">请您牢记密码</string>
	<string name="myingo_login_inputphone_hint">请输入您的手机号</string>
	<string name="myingo_login_inputcode_hint">请输入您的验证码</string>
	<string name="myingo_retrieve_inputnewpwd_hint">请输入新密码</string>
	<string name="myinfo_retrieve_password_ok">确认</string>
	<string name="myinfo_retrieve_password">找回密码</string>
	<string name="myinfo_register_term_title">用户协议</string>
	<string name="myinfo_retrieve_oldpwd_null_error">旧密码不能为空</string>
	<string name="myinfo_retrieve_newpwd_null_error">新密码不能为空</string>
	<string name="myinfo_retrieve_new2pwd_null_error">再次输入新密码不能为空</string>
	<string name="myinfo_retrieve_success">密码已成功找回,请牢记!</string>
	<string name="personal_fragment_login">登录</string>
	<string name="personal_fragment_all">全部</string>
	<string name="personal_fragment_daifukuan">待付款</string>
	<string name="personal_fragment_daifahuo">待发货</string>
	<string name="personal_fragment_daishouhuo">待收货</string>
	<string name="personal_fragment_daipingjia">待评价</string>
	<string name="personal_fragment_tuikuanjilu">退款记录</string>
	<string name="personal_fragment_myorder">我的订单</string>
	<string name="personal_fragment_mymember">会员积分</string>
	<string name="personal_fragment_mycollection">我的收藏</string>
	<string name="personal_fragment_payhelp">支付帮助</string>
	<string name="personal_fragment_invitefriends">邀请好友</string>
	<string name="personal_fragment_feedback">意见反馈</string>
	<string name="personal_fragment_checkupdate">检查更新</string>
	<string name="personal_fragment_aboutus">关于我很宅</string>
	<string name="personal_fragment_contact">联系我们</string>
	<string name="personal_fragment_clean">清理缓存</string>
	<string name="personal_fragment_welcome">欢迎您，</string>
	<string name="personal_fragment_grade">等级：</string>
	<string name="personal_fragment_integral">积分：</string>
	<string name="personal_fragment_loginout">退出登录</string>
	<string name="myinfo_fragment_loginout_success">退出登录成功!</string>
	<string name="personal_mymember_title">会员等级</string>
	<string name="personal_mymember_memberlevel">会员等级</string>
	<string name="personal_mymember_myorder">我的积分</string>
	<string name="personal_mymember_integralrecord">积分记录</string>
	<string name="personal_fragment_myorder_title">我的订单</string>
	<string name="personal_fragment_myorder_price">价格</string>
	<string name="personal_fragment_myorder_number">数量</string>
	<string name="personal_fragment_myorder_amounts">交易金额</string>
	<string name="personal_fragment_myorder_yuan">元</string>
	<string name="personal_fragment_myorder_daifukuan">代付款</string>
	<string name="personal_fragment_myorder_kefu">客服</string>
	<string name="personal_fragment_myorder_cancel">取消订单</string>
	<string name="personal_fragment_myorder_pay">付款</string>
	<string name="personal_fragment_myorder_remind">提醒发货</string>
	<string name="personal_fragment_myorder_pingjia">评价</string>
	<string name="personal_fragment_myorder_refund">申请退款</string>
	<string name="personal_fragment_myorder_evaluation">发表评价</string>
	<string name="personal_fragment_myorder_evaluation_amounts">已付金额</string>
	<string name="personal_myorder_evaluation_product_quality">产品质量</string>
	<string name="personal_myorder_evaluation_product_quantity">产品数量</string>
	<string name="personal_myorder_evaluation_delivery_speed">发货速度</string>
	<string name="personal_myorder_evaluation_service_attitude">服务态度</string>
	<string name="personal_myorder_evaluation_content_hint">对该商品说点什么吧&#8230;</string>
	<string name="personal_myorder_evaluation_content_not_null">对商品评论不能为空，请输入商品评论</string>
	<string name="personal_myorder_evaluation_product_quality_not_null">产品质量不能为空</string>
	<string name="personal_myorder_evaluation_product_quantity_not_null">产品数量不能为空</string>
	<string name="personal_myorder_evaluation_delivery_speed_not_null">发货速度不能为空</string>
	<string name="personal_myorder_evaluation_service_attitude_not_null">服务态度不能为空</string>
	<string name="personal_fragment_mycollection_title">我的收藏</string>
	<string name="personal_mycollection_collectionbaby">收藏的宝贝</string>
	<string name="personal_mycollection_collectionrecipe">收藏的食谱</string>
	<string name="personal_integralrecord_title">积分记录</string>
	<string name="personal_integralrecord_details">详情</string>
	<string name="personal_integralrecord_integral">积分</string>
	<string name="personal_integralrecord_time">时间</string>
	<string name="personal_payhelp_title">支付帮助</string>
	<string name="personal_invitefriends_title">邀请好友</string>
	<string name="personal_feedback_title">意见反馈</string>
	<string name="personal_feedback_success">反馈成功！</string>
	<string name="personal_feedback_phone">手机号：</string>
	<string name="personal_feedback_submit">提交</string>
	<string name="personal_feedback_content_null_error">反馈信息不能为空，请输入要反馈的信息！</string>
	<string name="personal_checkupdate_title">检查更新</string>
	<string name="personal_aboutus_title">关于我们</string>
	<string name="personal_aboutus_coutent">【我很宅】昆明市第一家生鲜网购平台 \n
	    主要有：水果、蔬菜、鲜肉、水产、粮油、糖醋盐、副食、网上直销。
	   保险，保质，又保量。批发价送当天送到家，所有产品的销售，物流，服务，均由昆明市瓜瓜农业科技公司全套自营，安全可靠，天天买，天天鲜，诚信发展。</string>
	<string name="personal_aboutus_copyright">Copyright ©2015</string>
	<string name="personal_aboutus_gongsi">昆明瓜瓜农业科技有限公司</string>
	<string name="personal_waitdaifukuandialog_message">收货已成功,您可以前往评价该商品了。</string>
	<string name="personal_waitdaifukuandislog_ok">&#160;&#160;评价&#160;&#160;</string>
	<string name="personal_clean_title">清理缓存</string>
	<string name="personal_comment">发表评价</string>
	<string name="personal_comment_talk">对该商品说点什么吧···</string>
	<string name="personal_manageaddress_title">管理收货地址</string>
	<string name="personal_manageaddress_add_title">添加收货地址</string>
	<string name="personal_manageaddress">收货地址</string>
	<string name="personal_address_receipname">收货人</string>
	<string name="personal_address_receiphone">联系电话</string>
	<string name="personal_address_receipaddress">收货地址</string>
	<string name="personal_address_receipaddress2">收货地址:</string>
	<string name="personal_address_receiaok">确认添加</string>
	<string name="personal_updatepsrsonal_title">修改资料</string>
	<string name="personal_updatepersonal_headimg">头像</string>
	<string name="personal_updatepersonal_nickname">昵称</string>
	<string name="personal_updatepersonal_sex">性别</string>
	<string name="personal_updatepersonal_age">年龄</string>
	<string name="personal_updatepersonal_invitation">邀请码</string>
	<string name="personal_updatepersonal_updatepwd">修改密码</string>
	<string name="personal_updatepersonal_manageaddress">管理收货地址</string>
	<string name="personal_updatepersonal_ok">完成</string>
	<string name="personal_updatepersonal_success">资料修改成功!</string>
	<string name="personal_deal_details">交易详情</string>
	<string name="personal_deal_state">交易状态</string>
	<string name="personal_deal_ordernumber">订单编号</string>
	<string name="personal_deal_orderncount">订单数量</string>
	<string name="personal_deal_ordernmoney">订单金额</string>
	<string name="personal_deal_ordernfreight">订单运费</string>
	<string name="personal_deal_oktime">确认时间</string>
	<string name="auth_cancel">授权操作已取消</string>
	<string name="auth_error">授权操作遇到错误，请阅读Logcat输出; \n 如微信登录，需要微信客户端</string>
	<string name="auth_complete">授权成功，正在跳转登录操作…</string>
	<string name="tpl_sign_user_info">用户信息</string>
	<string name="tpl_sign_up">注册</string>
	<string name="tpl_girl">女</string>
    <string name="tpl_boy">男</string>
     <string name="tpl_camera">拍照</string>
     <string name="tpl_picture">从相册获取</string>
	<string name="tpl_key_user_icon">头像</string>
	<string name="tpl_key_user_name">昵称</string>
    <string name="tpl_key_user_gender">性别</string>
    <string name="tpl_key_user_note">备注</string>
    <string name="tpl_value_user_note">请填写备注信息</string>
    <string name="tpl_change_user_name_title">更改名字</string>
    <string name="tpl_change_user_note_title">更改备注</string>
    <string name="tpl_input_user_name_hint">好名字可以让你的朋友更容易记住你</string>
    <string name="tpl_input_user_note_hint">自定义备注信息，给你带来更多吸引</string>
    <string name="signup_failed">注册失败</string>
    <string name="signup_success">注册成功</string>
    <string name="share_sdk">Share SDK</string>
    <string name="login_with_msg">用手机号码登录</string>
    <string name="login_with_weixin">用微信登录</string>
    <string name="login_with_sina_weibo">用新浪微博登录</string>
    <string name="login_with_qzone">用QQ登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    <string name="tpl_get_verify_code">获取验证码</string>
    <string name="tpl_msg_login_hint">请输入手机号码</string>
    <string name="tpl_verify_code_hint">请输验证码</string>
    <string name="tpl_send_verify_code">检验验证码</string>
    <string name="homepage_list_item_image">商品图片</string>
</resources>